objects/zqu__ProductRatePlanOption__c.object
<CustomObject>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The date when the product rate plan expires and can&apos;t be subscribed to.</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The date when the product rate plan becomes available and can be subscribed to.</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Origin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is only for Snapshot record type to lookup the original instance.</description>
        <label>Original Option</label>
        <referenceTo>zqu__ProductRatePlanOption__c</referenceTo>
        <relationshipLabel>Product Rate Plan Options</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__OriginalPrpoId__c</fullName>
        <label>Original Product Rate Plan Option ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductOption__c</fullName>
        <label>Product Option</label>
        <referenceTo>zqu__ProductOption__c</referenceTo>
        <relationshipLabel>Product Rate Plan Options</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product rate plan being overrided.</description>
        <label>Product Rate Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ProductRatePlan__c.zqu__Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.zqu__Product__c</valueField>
            </filterItems>
            <filterItems>
                <field>zqu__ProductRatePlan__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Product Rate Plan Options</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product contains the overrided product rate plan. Should be the same object as parent product option&apos;s product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Rate Plan Options</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Rate Plan</label>
        <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Snapshot Product Rate Plan Options</relationshipLabel>
        <relationshipName>SnapshotProductRatePlanOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Rate Plan Option</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Options</pluralLabel>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Snapshot</fullName>
        <active>true</active>
        <label>Snapshot</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zqu__Effective_Date_Rule</fullName>
        <active>true</active>
        <description>Effective End Date should be after Effective Start Date</description>
        <errorConditionFormula>AND(  
NOT( ISNULL( zqu__EffectiveStartDate__c) ),
NOT( ISNULL(  zqu__EffectiveEndDate__c ) ),
zqu__EffectiveEndDate__c &lt; zqu__EffectiveStartDate__c
 )</errorConditionFormula>
        <errorDisplayField>zqu__EffectiveEndDate__c</errorDisplayField>
        <errorMessage>Effective End Date cannot be before Effective Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Override_Rule</fullName>
        <active>true</active>
        <description>Override ProductRatePlan should belong to the Product Option&apos;s child product</description>
        <errorConditionFormula>zqu__ProductRatePlan__r.zqu__Product__c  &lt;&gt;  zqu__ProductOption__r.zqu__ChildProduct__c</errorConditionFormula>
        <errorDisplayField>zqu__ProductRatePlan__c</errorDisplayField>
        <errorMessage>Override ProductRatePlan should belong to the Product Option&apos;s child product</errorMessage>
    </validationRules>
</CustomObject>